--- a/package.json
+++ b/package.json
@@ -1,8 +1,12 @@
 {
 	"name": "multimcts",
-	"version": "1.1.0",
+	"version": "1.1.1",
 	"description": "Monte Carlo Tree Search for multiple teams",
 	"main": "src/mcts.js",
+	"exports": {
+		".": "./src/mcts.js",
+		"./tictactoe": "./examples/tictactoe.js"
+	},
 	"scripts": {
 		"test": "node --test"
 	},
